Remove unused imports and replace Collectors.toList() with .toList()