@@ -1,5 +1,5 @@
 /*
- * Copyright 2020-2024 IEXEC BLOCKCHAIN TECH
+ * Copyright 2020-2025 IEXEC BLOCKCHAIN TECH
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -38,7 +38,6 @@ import java.text.MessageFormat;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -151,7 +150,7 @@ public class BrokerService {
             List<String> events = receipt.getLogs().stream()
                     .filter(log -> expectedTopics.equals(log.getTopics()))
                     .map(Log::getData)
-                    .collect(Collectors.toList());
+                    .toList();
             log.info("logs {}", events);
             if (events.size() != 1) {
                 throw new IllegalStateException("A single deal should have been created, not " + events.size());
